Bug 313036 - add83a0c51a48c5911 causes a flood of entriesRemoved signals
Summary: add83a0c51a48c5911 causes a flood of entriesRemoved signals
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: queryservice (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-10 19:18 UTC by Marco Martin
Modified: 2013-01-22 15:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Martin 2013-01-10 19:18:27 UTC
after the commit add83a0c51a48c5911, if results of a query are monitored trough a QueryServiceClient,  after any change in the nepomuk database, (new resources or properties of existing resources changed) the query client will receive an entriesRemoved signal for each one of its results, even if none of the resources in the results were touched.



Reproducible: Always



Expected Results:  
no entriesRemoved signals should be emitted (except for eventual results invalidated by the modifications)

reverting nepomuk-core to 02eb6ee582a8 (before add83a0c51) fixes this problem, even tough BUG313035 is still present
going back to add83a0c51 causes the problem again
Comment 1 Vishesh Handa 2013-01-22 14:39:46 UTC
Git commit ffe1830a50a258d120ced9e4b9dea7949b70afca by Vishesh Handa.
Committed on 22/01/2013 at 15:01.
Pushed by vhanda into branch 'KDE/4.10'.

QueryService: Do not emit unnecessary entriesRemoved signals

Remember to always add the result in Folder::addResult to the
m_newResults. Earlier it was only added when the result was actually
"new", this resulted it sending entryRemoved signals for all resources
in the old query result.

M  +4    -2    services/storage/query/folder.cpp

http://commits.kde.org/nepomuk-core/ffe1830a50a258d120ced9e4b9dea7949b70afca
Comment 2 Marco Martin 2013-01-22 15:30:59 UTC
i can confirm that it fixes the issue here as well.
is this planned to be pushed in master as well?
Comment 3 Vishesh Handa 2013-01-22 15:34:10 UTC
On Tue, Jan 22, 2013 at 9:00 PM, Marco Martin <notmart@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=313036
>
> --- Comment #2 from Marco Martin <notmart@gmail.com> ---
> i can confirm that it fixes the issue here as well.
> is this planned to be pushed in master as well?
>

I was planning on merging 4.10 into master in a couple of hours. If you
want it right now, then please feel to merge it right now. They shouldn't
be any conflicts.


>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
> _______________________________________________
> Nepomuk-bugs mailing list
> Nepomuk-bugs@kde.org
> https://mail.kde.org/mailman/listinfo/nepomuk-bugs
>
Comment 4 Vishesh Handa 2013-01-22 15:35:04 UTC
On Tue, Jan 22, 2013 at 9:04 PM, Vishesh Handa <me@vhanda.in> wrote:

>
> I was planning on merging 4.10 into master in a couple of hours. If you
> want it right now, then please feel to merge it right now. They shouldn't
> be any conflicts.
>

Urgh.

I meant - Please feel FREE to merge it right now.