QueryService: Do not emit unnecessary entriesRemoved signals

Remember to always add the result in Folder::addResult to the
m_newResults. Earlier it was only added when the result was actually
"new", this resulted it sending entryRemoved signals for all resources
in the old query result.

BUG: 313036